sites/all/themes/cfia/scss/modules/_footer.scss
/**
 *
 * Footer
 *
 */

$top-and-button-margin: 2em;

.footer {
  position: absolute;
  bottom: 0;

  width: 100%;

  background-color: black;

  &--content {
    margin-left: auto;
    margin-right: auto;
    max-width: $breakpoint-desk;
    padding-top: $top-and-button-margin;
    padding-right: 1em;
    padding-left: 1em;

    @include flexbox;
    @include flex-flow(row wrap);
  }

  &--mail {
    margin-bottom: $top-and-button-margin;

    @include flex-shrink(0);

    a {
      color: white;
    }
  }

  &--social {
    margin-bottom: $top-and-button-margin;

    @include flexbox;
    @include flex-basis(100%);
    @include align-items(center);
    @include justify-content(space-around);
  }

  &--icons {
    width: 1.8em;
    margin-left: 1em;
  }

  @include breakpoint($breakpoint-tablet) {
    &--content {
      @include flex-flow(row nowrap);
    }

    &--social,
    &--icons {
      @include flex-basis(50%);
    }

    &--social {
      @include flexbox;
      @include align-items(center);
      @include justify-content(flex-end);
    }
  }
}

